Fix accordion visibility

--- a/stylus/global/_helpers.styl
+++ b/stylus/global/_helpers.styl
@@ -148,6 +148,10 @@
 .z-10 
   z-index: 10;
 
+.t03 
+    transition: all 0.3s ease-in;  
+    
+
 @media only screen and (max-width: $small)
     .hide-small
         display none
